# blog

./: .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md
.gitea/: PULL_REQUEST_TEMPLATE.yaml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  main.py
backend/.sqlx/: query-0c9effcc24f4319c47898e0ade4e5ccef3c47c014cfcb65805cbf1c625fef1e7.json  query-1926140fd0232511d302cd514f41af1e619a1c68b94e18cdc53234c9de701390.json  query-38181c2e36077c546944fbfe124c623706f920fd6b1a9a1cd143ecee6c9d5019.json  query-4e022312b61c557d23f4541961f07b7afa8bf1f62f4a8e248d6520864b126a6a.json  query-4f94311a782901f333e0447caceb8a8b6153fee278daeb3767e33cb9176d814e.json  query-5189bdfd0aa6b4ac478cc48efde4cdbd9cc9605fe0f2c4dc4506827fa0fd2ad6.json  query-6c94c1e52720497ce20acd4fb43406630f87d8f96005bb3cc7595cbb0cfa37f3.json  query-715922e4ffa6881f23ea890ebf77abd86937c3f4fe606572156a29d4441028e9.json  query-82c4c8d03298009e776d42ae6069182cc318e0b1d8497a675cf4449adcaf1927.json  query-8bb3f93b67c8b1c5b709bc9154b9a6f2f19685a0c32e5de632f4c0fcc95cbb5c.json  query-9a92247df2cc5f3095fb7b76d4951bee74da4d779002916050ab1aab93e2471a.json  query-9c3ae9a539390e3b0493d325439fdc73cb2925bdb17330a21db4341e5822291b.json  query-9d1ffa7a71c8830d75eeeb26800ee7a7d8ede2410b423985caffd86361ad9263.json  query-9e486528becb873ace62656c78805034ddca950db7306ee04257d6b589b5a0d9.json  query-a0e1ed95ce9d705653281455cc59e8ed130a496b09dccbf89e919f4c9798e91a.json  query-b084aa65fa3cdb1abdd02fd9e2ade04a71dd98eef245780a6f34f0b72564f63e.json  query-d0867ba2857fedcdc9a754d0394c4f040d559118d0b9f8b6f4dcd6e6fde5d381.json  query-ddf748360886e0e9161d8812e2d17efaa80eedb259fc9f98c7600476c5b3a84b.json  query-e9741186ea464ef1ba3598223ad9f042ec876cbdc4e2d9eca787ff1de598551c.json  query-f0c2c0fe0a30790e88449da79c859d4e3829b9b2a6a496c9a429a05fbdb2e30a.json  query-f4ef2b4e53389d2bf6a6299fc4e4ffd0df1393e1805ae1c37306b25c721de7e3.json
backend/feature/auth/: Cargo.toml
backend/feature/auth/src/: framework.rs
backend/feature/auth/src/adapter/: delivery.rs  gateway.rs
backend/feature/auth/src/adapter/delivery/: auth_controller.rs  oidc_callback_query_dto.rs  user_response_dto.rs
backend/feature/auth/src/adapter/gateway/: auth_oidc_service.rs  auth_repository_impl.rs  oidc_claims_response_dto.rs  user_db_mapper.rs  user_db_service.rs
backend/feature/auth/src/application/: error.rs  use_case.rs
backend/feature/auth/src/application/error/: auth_error.rs
backend/feature/auth/src/application/gateway/: auth_repository.rs
backend/feature/auth/src/application/use_case/: exchange_auth_code_use_case.rs  get_auth_url_use_case.rs  get_user_use_case.rs
backend/feature/auth/src/domain/entity/: user.rs
backend/feature/auth/src/framework/: db.rs  oidc.rs  web.rs
backend/feature/auth/src/framework/db/: user_db_service_impl.rs  user_record.rs
backend/feature/auth/src/framework/oidc/: auth_oidc_service_impl.rs
backend/feature/auth/src/framework/web/: auth_api_doc.rs  auth_middleware.rs  auth_web_routes.rs  constants.rs  get_logged_in_user_handler.rs  oidc_callback_handler.rs  oidc_login_handler.rs  oidc_logout_handler.rs
backend/feature/common/: Cargo.toml
backend/feature/common/src/framework/: error.rs
backend/feature/image/: Cargo.toml
backend/feature/image/src/: adapter.rs  application.rs  framework.rs
backend/feature/image/src/adapter/: delivery.rs  gateway.rs
backend/feature/image/src/adapter/delivery/: image_controller.rs  image_info_response_dto.rs  image_request_dto.rs  image_response_dto.rs
backend/feature/image/src/adapter/gateway/: image_db_mapper.rs  image_db_service.rs  image_repository_impl.rs  image_storage.rs
backend/feature/image/src/application/: error.rs  gateway.rs  use_case.rs
backend/feature/image/src/application/error/: image_error.rs
backend/feature/image/src/domain/: entity.rs
backend/feature/image/src/framework/: db.rs  storage.rs  web.rs
backend/feature/label/: Cargo.toml
backend/feature/label/src/: application.rs
backend/feature/label/src/adapter/: delivery.rs  gateway.rs
backend/feature/label/src/application/: error.rs  gateway.rs  use_case.rs
backend/feature/label/src/domain/: entity.rs
backend/feature/label/src/framework/: db.rs  web.rs
backend/feature/post/: Cargo.toml
backend/feature/post/src/: adapter.rs  application.rs  lib.rs
backend/feature/post/src/adapter/: delivery.rs  gateway.rs
backend/feature/post/src/application/: gateway.rs  service.rs  use_case.rs
backend/feature/post/src/domain/: entity.rs  error.rs
backend/feature/post/src/framework/: db.rs  web.rs
backend/feature/search/: Cargo.toml
backend/feature/search/src/adapter/: gateway.rs  service.rs
backend/feature/search/src/application/: gateway.rs  use_case.rs
backend/feature/search/src/domain/: error.rs
backend/feature/search/src/framework/: cache.rs  db.rs
backend/migrations/: 20250505012740_v0.1.1.sql  20250725231740_v0.3.0.sql  20250801061907_create_update_updated_time_function.sql  20250801061939_create_post_table.sql  20250801062007_create_label_table.sql  20250801062251_create_post_label_table.sql  20250801062344_create_image_table.sql  20250801062412_create_user_table.sql  20250802053708_add_order_to_post_label.sql  20251011200359_add_semantic_id_to_post.down.sql  20251011200359_add_semantic_id_to_post.sql  20251012123809_add_unique_index_to_label_name.down.sql  20251012123809_add_unique_index_to_label_name.sql  20251014133149_make_preview_image_url_nullable.down.sql  20251014133149_make_preview_image_url_nullable.sql  20260325070010_create_post_image_table.down.sql  20260325070010_create_post_image_table.sql  20260331013000_update_post_image_image_fk_to_restrict.down.sql  20260331013000_update_post_image_image_fk_to_restrict.sql
backend/model/: db_object.py  jsend.py  post.py
backend/router/: post.py
backend/server/: Cargo.toml
backend/server/src/: api_doc.rs  configuration.rs  container.rs  lib.rs  main.rs
backend/server/src/configuration/: db.rs  embedding.rs  oidc.rs  qdrant.rs  redis.rs  sentry.rs  server.rs  session.rs  storage.rs
backend/util/: database.py
(+422 files in other folders)
