[workspace]
members = [
    "server",
    "feature/auth",
    "feature/common",
    "feature/image",
    "feature/label",
    "feature/post",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"

[profile.release]
debug = true

[workspace.dependencies]
actix-multipart = "0.7.2"
actix-session = { version = "0.10.1", features = ["redis-session"] }
actix-web = "4.10.2"
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.41"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
openidconnect = { version = "4.0.1", features = [
    "reqwest",
    "reqwest-blocking",
] }
percent-encoding = "2.3.1"
regex = "1.12.1"
sentry = { version = "0.42.0", features = ["actix", "anyhow"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.45.0", features = ["full"] }
utoipa = { version = "5.4.0", features = [
    "actix_extras",
    "non_strict_integers",
    "url",
] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }

server.path = "server"
auth.path = "feature/auth"
common.path = "feature/common"
image.path = "feature/image"
label.path = "feature/label"
post.path = "feature/post"
