[workspace]
members = [
    "server",
    "feature/auth",
    "feature/common",
    "feature/image",
    "feature/label",
    "feature/post",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"

[profile.release]
debug = true

[workspace.dependencies]
actix-multipart = "0.7.2"
actix-session = { version = "0.11.0", features = ["redis-session"] }
actix-web = "4.13.0"
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.44"
dotenv = "0.15.0"
env_logger = "0.11.10"
futures = "0.3.32"
hex = "0.4.3"
log = "0.4.29"
openidconnect = { version = "4.0.1", features = [
    "reqwest",
    "reqwest-blocking",
] }
percent-encoding = "2.3.2"
regex = "1.12.3"
sentry = { version = "0.47.0", features = ["actix", "anyhow"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.50.0", features = ["full"] }
utoipa = { version = "5.4.0", features = [
    "actix_extras",
    "non_strict_integers",
    "url",
] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }

server.path = "server"
auth.path = "feature/auth"
common.path = "feature/common"
image.path = "feature/image"
label.path = "feature/label"
post.path = "feature/post"
