[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
actix-session.workspace = true
actix-web.workspace = true
dotenv.workspace = true
env_logger.workspace = true
hex.workspace = true
openidconnect.workspace = true
percent-encoding.workspace = true
sentry.workspace = true
sqlx.workspace = true
utoipa.workspace = true
utoipa-redoc.workspace = true

auth.workspace = true
image.workspace = true
label.workspace = true
post.workspace = true
