[package]
name = "image"
version.workspace = true
edition.workspace = true

[dependencies]
actix-multipart.workspace = true
actix-web.workspace = true
async-trait.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
sqlx.workspace = true
utoipa.workspace = true

auth.workspace = true
