[package]
name = "post"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
regex.workspace = true
sentry.workspace = true
serde.workspace = true
sqlx.workspace = true
utoipa.workspace = true

auth.workspace = true
common.workspace = true
