[package]
name = "search"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
fastembed.workspace = true
qdrant-client.workspace = true
serde.workspace = true
text-splitter.workspace = true
tokenizers.workspace = true
tokio.workspace = true

auth.workspace = true
common.workspace = true
post.workspace = true
